// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 70;
  cursor: pointer;
  background-color: rgba(10,10,10,0.8);
  opacity: 0;
}

.emotion-0.nk-overlay-enter {
  opacity: 0;
}

.emotion-0.nk-overlay-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-enter-done {
  opacity: 1;
}

.emotion-0.nk-overlay-exit {
  opacity: 1;
}

.emotion-0.nk-overlay-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-exit-done {
  opacity: 0;
}

<div
    class="nk-modal-enter-done emotion-0"
    data-testid="overlay"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 80;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 2px 8px 0 rgba(40,41,61,0.04),0 16px 24px 0 rgba(96,97,112,0.16);
  min-height: 15vh;
  opacity: 0;
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    top: 20vh;
    -webkit-transform: translate(-50%, 0);
    -moz-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
  }
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    width: 90vw;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    width: 60vw;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    width: 45vw;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    width: 38vw;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    width: 31vw;
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    max-height: 95vh;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    max-height: 80vh;
  }
}

.emotion-0.nk-modal-enter {
  opacity: 0;
}

.emotion-0.nk-modal-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-enter-done {
  opacity: 1;
}

.emotion-0.nk-modal-exit {
  opacity: 1;
}

.emotion-0.nk-modal-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-exit-done {
  opacity: 0;
}

.emotion-1 {
  box-sizing: border-box;
  min-height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
}

.emotion-4 {
  margin: 0;
  padding: 1px 0;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 8px;
  width: 48px;
  height: 48px;
  margin-left: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden auto;
  padding: 24px;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 48px;
  height: 48px;
  padding: 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  right: 0;
  margin: 0 8px;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #2e2e2e;
}

.emotion-8:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-8:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-8:disabled {
  background-color: transparent;
  color: #c0c0c0;
}

.emotion-8:disabled svg {
  fill: #c0c0c0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-11 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    data-focus-lock-disabled="false"
  >
    <div
      aria-modal="true"
      class="nk-modal-enter-done emotion-0"
      data-testid="modal"
      role="dialog"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <p
              class="emotion-4"
            >
              Modal header content
            </p>
          </div>
          <div
            class="emotion-5"
          />
        </div>
      </div>
      <div
        class="emotion-6"
        data-testid="dialog-content"
      >
        <p
          class="emotion-4"
        >
          Modal body content
        </p>
      </div>
      <button
        aria-label="close"
        class="emotion-8"
        data-testid="button"
        style="top: 0px;"
        type="button"
      >
        <div
          class="emotion-9"
        >
          <div
            class="emotion-10"
          >
            <svg
              aria-hidden="true"
              class="emotion-11 emotion-12"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Modal renders modal with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 70;
  cursor: pointer;
  background-color: #ffeecf;
  opacity: 0;
}

.emotion-0.nk-overlay-enter {
  opacity: 0;
}

.emotion-0.nk-overlay-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-enter-done {
  opacity: 1;
}

.emotion-0.nk-overlay-exit {
  opacity: 1;
}

.emotion-0.nk-overlay-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-exit-done {
  opacity: 0;
}

<div
    class="nk-modal-enter-done emotion-0"
    data-testid="overlay"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 80;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #e6faeb;
  box-shadow: 0px 0px 16px 14px rgba(169,183,172,0.9);
  width: 600px;
  min-width: 20vw;
  max-width: 80vw;
  height: 500px;
  min-height: 20vh;
  opacity: 0;
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    top: 15vh;
    -webkit-transform: translate(-50%, 0);
    -moz-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    max-height: 90vh;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    max-height: 85vh;
  }
}

.emotion-0.nk-modal-enter {
  opacity: 0;
}

.emotion-0.nk-modal-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-enter-done {
  opacity: 1;
}

.emotion-0.nk-modal-exit {
  opacity: 1;
}

.emotion-0.nk-modal-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-exit-done {
  opacity: 0;
}

.emotion-1 {
  box-sizing: border-box;
  background-color: transparent;
  border-style: none none solid none;
  border-width: 1px;
  border-color: #ef1703;
  min-height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 8px;
  width: 48px;
  height: 48px;
  margin-left: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden auto;
  padding: 32px;
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 48px;
  height: 48px;
  padding: 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-width: 1px;
  border-style: solid;
  border-color: #a2dae3;
  background-color: transparent;
  border-radius: 50%;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  right: 0;
  margin: 0 8px;
}

.emotion-6 svg {
  width: 24px;
  height: 24px;
}

.emotion-6 svg {
  fill: #128293;
}

.emotion-6:hover:not(:disabled) {
  background-color: #45b5c6;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-9 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    data-focus-lock-disabled="false"
  >
    <div
      aria-modal="true"
      class="nk-modal-enter-done emotion-0"
      data-testid="modal"
      role="dialog"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          />
        </div>
      </div>
      <div
        class="emotion-4"
        data-testid="dialog-content"
      >
        <p
          class="emotion-5"
        >
          Modal body content
        </p>
      </div>
      <button
        aria-label="close"
        class="emotion-6"
        data-testid="button"
        style="top: 0px;"
        type="button"
      >
        <div
          class="emotion-7"
        >
          <div
            class="emotion-8"
          >
            <svg
              aria-hidden="true"
              class="emotion-9 emotion-10"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Modal renders nothing if modal is closed 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 70;
  cursor: pointer;
  background-color: rgba(10,10,10,0.8);
  opacity: 0;
}

.emotion-0.nk-overlay-enter {
  opacity: 0;
}

.emotion-0.nk-overlay-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-enter-done {
  opacity: 1;
}

.emotion-0.nk-overlay-exit {
  opacity: 1;
}

.emotion-0.nk-overlay-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-exit-done {
  opacity: 0;
}

<div
    class="emotion-0"
    data-testid="overlay"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  pointer-events: none;
  z-index: 80;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 2px 8px 0 rgba(40,41,61,0.04),0 16px 24px 0 rgba(96,97,112,0.16);
  min-height: 15vh;
  opacity: 0;
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    top: 20vh;
    -webkit-transform: translate(-50%, 0);
    -moz-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
  }
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    width: 90vw;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    width: 60vw;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    width: 45vw;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    width: 38vw;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    width: 31vw;
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    max-height: 95vh;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    max-height: 80vh;
  }
}

.emotion-0.nk-modal-enter {
  opacity: 0;
}

.emotion-0.nk-modal-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-enter-done {
  opacity: 1;
}

.emotion-0.nk-modal-exit {
  opacity: 1;
}

.emotion-0.nk-modal-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-exit-done {
  opacity: 0;
}

.emotion-1 {
  box-sizing: border-box;
  min-height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
}

.emotion-4 {
  margin: 0;
  padding: 1px 0;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 8px;
  width: 48px;
  height: 48px;
  margin-left: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden auto;
  padding: 24px;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 48px;
  height: 48px;
  padding: 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  right: 0;
  margin: 0 8px;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #2e2e2e;
}

.emotion-8:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-8:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-8:disabled {
  background-color: transparent;
  color: #c0c0c0;
}

.emotion-8:disabled svg {
  fill: #c0c0c0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-11 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-modal="true"
      class="emotion-0"
      data-testid="modal"
      role="dialog"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <p
              class="emotion-4"
            >
              Modal header content
            </p>
          </div>
          <div
            class="emotion-5"
          />
        </div>
      </div>
      <div
        class="emotion-6"
        data-testid="dialog-content"
      >
        <p
          class="emotion-4"
        >
          Modal body content
        </p>
      </div>
      <button
        aria-label="close"
        class="emotion-8"
        data-testid="button"
        style="top: 0px;"
        type="button"
      >
        <div
          class="emotion-9"
        >
          <div
            class="emotion-10"
          >
            <svg
              aria-hidden="true"
              class="emotion-11 emotion-12"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</DocumentFragment>
`;

exports[`Modal renders screen reader message when focus trapping disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 70;
  cursor: pointer;
  background-color: rgba(10,10,10,0.8);
  opacity: 0;
}

.emotion-0.nk-overlay-enter {
  opacity: 0;
}

.emotion-0.nk-overlay-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-enter-done {
  opacity: 1;
}

.emotion-0.nk-overlay-exit {
  opacity: 1;
}

.emotion-0.nk-overlay-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-exit-done {
  opacity: 0;
}

<div
    class="nk-modal-enter-done emotion-0"
    data-testid="overlay"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 80;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 2px 8px 0 rgba(40,41,61,0.04),0 16px 24px 0 rgba(96,97,112,0.16);
  min-height: 15vh;
  opacity: 0;
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    top: 20vh;
    -webkit-transform: translate(-50%, 0);
    -moz-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
  }
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    width: 90vw;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    width: 60vw;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    width: 45vw;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    width: 38vw;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    width: 31vw;
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    max-height: 95vh;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    max-height: 80vh;
  }
}

.emotion-0.nk-modal-enter {
  opacity: 0;
}

.emotion-0.nk-modal-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-enter-done {
  opacity: 1;
}

.emotion-0.nk-modal-exit {
  opacity: 1;
}

.emotion-0.nk-modal-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-exit-done {
  opacity: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  overflow: hidden auto;
}

.emotion-2 {
  box-sizing: border-box;
  min-height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 8px;
  width: 48px;
  height: 48px;
  margin-left: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-7 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden auto;
  padding: 24px;
}

.emotion-9 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 48px;
  height: 48px;
  padding: 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  right: 0;
  margin: 0 8px;
}

.emotion-9 svg {
  width: 24px;
  height: 24px;
}

.emotion-9 svg {
  fill: #2e2e2e;
}

.emotion-9:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-9:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-9:disabled {
  background-color: transparent;
  color: #c0c0c0;
}

.emotion-9:disabled svg {
  fill: #c0c0c0;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-12 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-14 {
  display: block;
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-modal="false"
      class="nk-modal-enter-done emotion-0"
      data-testid="modal"
      role="dialog"
    >
      <div
        class="emotion-1"
        data-autofocus-inside="true"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <p
                class="emotion-5"
              >
                Modal header content
              </p>
            </div>
            <div
              class="emotion-6"
            />
          </div>
        </div>
        <div
          class="emotion-7"
          data-testid="dialog-content"
        >
          <p
            class="emotion-5"
          >
            Modal body content
          </p>
        </div>
        <button
          aria-describedby="mock-nk-1"
          aria-label="close"
          class="emotion-9"
          data-testid="button"
          style="top: 0px;"
          type="button"
        >
          <div
            class="emotion-10"
          >
            <div
              class="emotion-11"
            >
              <svg
                aria-hidden="true"
                class="emotion-12 emotion-13"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </div>
          </div>
        </button>
        <span
          class="emotion-14"
          id="mock-nk-1"
        >
          With the next tab you will be leaving the dialog window.
        </span>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</DocumentFragment>
`;

exports[`Modal renders with aria-ariaLabelledby attribute 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 70;
  cursor: pointer;
  background-color: rgba(10,10,10,0.8);
  opacity: 0;
}

.emotion-0.nk-overlay-enter {
  opacity: 0;
}

.emotion-0.nk-overlay-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-enter-done {
  opacity: 1;
}

.emotion-0.nk-overlay-exit {
  opacity: 1;
}

.emotion-0.nk-overlay-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-exit-done {
  opacity: 0;
}

<div
    class="nk-modal-enter-done emotion-0"
    data-testid="overlay"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 80;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 2px 8px 0 rgba(40,41,61,0.04),0 16px 24px 0 rgba(96,97,112,0.16);
  min-height: 15vh;
  opacity: 0;
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    top: 20vh;
    -webkit-transform: translate(-50%, 0);
    -moz-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
  }
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    width: 90vw;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    width: 60vw;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    width: 45vw;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    width: 38vw;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    width: 31vw;
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    max-height: 95vh;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    max-height: 80vh;
  }
}

.emotion-0.nk-modal-enter {
  opacity: 0;
}

.emotion-0.nk-modal-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-enter-done {
  opacity: 1;
}

.emotion-0.nk-modal-exit {
  opacity: 1;
}

.emotion-0.nk-modal-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-exit-done {
  opacity: 0;
}

.emotion-1 {
  box-sizing: border-box;
  min-height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 8px;
  width: 48px;
  height: 48px;
  margin-left: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden auto;
  padding: 24px;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 48px;
  height: 48px;
  padding: 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  right: 0;
  margin: 0 8px;
}

.emotion-6 svg {
  width: 24px;
  height: 24px;
}

.emotion-6 svg {
  fill: #2e2e2e;
}

.emotion-6:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-6:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-6:disabled {
  background-color: transparent;
  color: #c0c0c0;
}

.emotion-6:disabled svg {
  fill: #c0c0c0;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-9 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    data-focus-lock-disabled="false"
  >
    <div
      aria-labelledby="headerLabel"
      aria-modal="true"
      class="nk-modal-enter-done emotion-0"
      data-testid="modal"
      role="dialog"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              id="headerLabel"
            >
              Overridden dialog header
            </div>
          </div>
          <div
            class="emotion-4"
          />
        </div>
      </div>
      <div
        class="emotion-5"
        data-testid="dialog-content"
      />
      <button
        aria-label="close"
        class="emotion-6"
        data-testid="button"
        style="top: 0px;"
        type="button"
      >
        <div
          class="emotion-7"
        >
          <div
            class="emotion-8"
          >
            <svg
              aria-hidden="true"
              class="emotion-9 emotion-10"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Modal renders with aria-describedby attribute 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 70;
  cursor: pointer;
  background-color: rgba(10,10,10,0.8);
  opacity: 0;
}

.emotion-0.nk-overlay-enter {
  opacity: 0;
}

.emotion-0.nk-overlay-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-enter-done {
  opacity: 1;
}

.emotion-0.nk-overlay-exit {
  opacity: 1;
}

.emotion-0.nk-overlay-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-exit-done {
  opacity: 0;
}

<div
    class="nk-modal-enter-done emotion-0"
    data-testid="overlay"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 80;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 2px 8px 0 rgba(40,41,61,0.04),0 16px 24px 0 rgba(96,97,112,0.16);
  min-height: 15vh;
  opacity: 0;
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    top: 20vh;
    -webkit-transform: translate(-50%, 0);
    -moz-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
  }
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    width: 90vw;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    width: 60vw;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    width: 45vw;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    width: 38vw;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    width: 31vw;
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    max-height: 95vh;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    max-height: 80vh;
  }
}

.emotion-0.nk-modal-enter {
  opacity: 0;
}

.emotion-0.nk-modal-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-enter-done {
  opacity: 1;
}

.emotion-0.nk-modal-exit {
  opacity: 1;
}

.emotion-0.nk-modal-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-exit-done {
  opacity: 0;
}

.emotion-1 {
  box-sizing: border-box;
  min-height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 8px;
  width: 48px;
  height: 48px;
  margin-left: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden auto;
  padding: 24px;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 48px;
  height: 48px;
  padding: 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  right: 0;
  margin: 0 8px;
}

.emotion-5 svg {
  width: 24px;
  height: 24px;
}

.emotion-5 svg {
  fill: #2e2e2e;
}

.emotion-5:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-5:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-5:disabled {
  background-color: transparent;
  color: #c0c0c0;
}

.emotion-5:disabled svg {
  fill: #c0c0c0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-8 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    data-focus-lock-disabled="false"
  >
    <div
      aria-describedby="description purpose"
      aria-modal="true"
      class="nk-modal-enter-done emotion-0"
      data-testid="modal"
      role="dialog"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          />
        </div>
      </div>
      <div
        class="emotion-4"
        data-testid="dialog-content"
      >
        <div
          id="description"
        >
          Overridden dialog components
        </div>
        <div
          id="purpose"
        >
          Showing different styles
        </div>
      </div>
      <button
        aria-label="close"
        class="emotion-5"
        data-testid="button"
        style="top: 0px;"
        type="button"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <svg
              aria-hidden="true"
              class="emotion-8 emotion-9"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Modal renders with different closePosition 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 70;
  cursor: pointer;
  background-color: rgba(10,10,10,0.8);
  opacity: 0;
}

.emotion-0.nk-overlay-enter {
  opacity: 0;
}

.emotion-0.nk-overlay-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-enter-done {
  opacity: 1;
}

.emotion-0.nk-overlay-exit {
  opacity: 1;
}

.emotion-0.nk-overlay-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-exit-done {
  opacity: 0;
}

<div
    class="nk-modal-enter-done emotion-0"
    data-testid="overlay"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 80;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 2px 8px 0 rgba(40,41,61,0.04),0 16px 24px 0 rgba(96,97,112,0.16);
  min-height: 15vh;
  opacity: 0;
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    top: 20vh;
    -webkit-transform: translate(-50%, 0);
    -moz-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
  }
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    width: 90vw;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    width: 60vw;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    width: 45vw;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    width: 38vw;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    width: 31vw;
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    max-height: 95vh;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    max-height: 80vh;
  }
}

.emotion-0.nk-modal-enter {
  opacity: 0;
}

.emotion-0.nk-modal-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-enter-done {
  opacity: 1;
}

.emotion-0.nk-modal-exit {
  opacity: 1;
}

.emotion-0.nk-modal-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-exit-done {
  opacity: 0;
}

.emotion-1 {
  box-sizing: border-box;
  min-height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
}

.emotion-4 {
  margin: 0;
  padding: 1px 0;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 8px;
  width: 48px;
  height: 48px;
  margin-right: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden auto;
  padding: 24px;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 48px;
  height: 48px;
  padding: 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  margin: 0 8px;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #2e2e2e;
}

.emotion-8:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-8:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-8:disabled {
  background-color: transparent;
  color: #c0c0c0;
}

.emotion-8:disabled svg {
  fill: #c0c0c0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-11 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    data-focus-lock-disabled="false"
  >
    <div
      aria-modal="true"
      class="nk-modal-enter-done emotion-0"
      data-testid="modal"
      role="dialog"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <p
              class="emotion-4"
            >
              Modal header content
            </p>
          </div>
          <div
            class="emotion-5"
          />
        </div>
      </div>
      <div
        class="emotion-6"
        data-testid="dialog-content"
      >
        <p
          class="emotion-4"
        >
          Modal body content
        </p>
      </div>
      <button
        aria-label="close"
        class="emotion-8"
        data-testid="button"
        style="top: 0px;"
        type="button"
      >
        <div
          class="emotion-9"
        >
          <div
            class="emotion-10"
          >
            <svg
              aria-hidden="true"
              class="emotion-11 emotion-12"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Modal renders without header 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 70;
  cursor: pointer;
  background-color: rgba(10,10,10,0.8);
  opacity: 0;
}

.emotion-0.nk-overlay-enter {
  opacity: 0;
}

.emotion-0.nk-overlay-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-enter-done {
  opacity: 1;
}

.emotion-0.nk-overlay-exit {
  opacity: 1;
}

.emotion-0.nk-overlay-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-overlay-exit-done {
  opacity: 0;
}

<div
    class="nk-modal-enter-done emotion-0"
    data-testid="overlay"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 80;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 2px 8px 0 rgba(40,41,61,0.04),0 16px 24px 0 rgba(96,97,112,0.16);
  min-height: 15vh;
  opacity: 0;
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    top: 20vh;
    -webkit-transform: translate(-50%, 0);
    -moz-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
  }
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    width: 90vw;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    width: 60vw;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    width: 45vw;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    width: 38vw;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    width: 31vw;
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    max-height: 95vh;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    max-height: 80vh;
  }
}

.emotion-0.nk-modal-enter {
  opacity: 0;
}

.emotion-0.nk-modal-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-enter-done {
  opacity: 1;
}

.emotion-0.nk-modal-exit {
  opacity: 1;
}

.emotion-0.nk-modal-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-exit-done {
  opacity: 0;
}

.emotion-1 {
  box-sizing: border-box;
  min-height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 8px;
  width: 48px;
  height: 48px;
  margin-left: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden auto;
  padding: 24px;
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 48px;
  height: 48px;
  padding: 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  right: 0;
  margin: 0 8px;
}

.emotion-6 svg {
  width: 24px;
  height: 24px;
}

.emotion-6 svg {
  fill: #2e2e2e;
}

.emotion-6:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-6:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-6:disabled {
  background-color: transparent;
  color: #c0c0c0;
}

.emotion-6:disabled svg {
  fill: #c0c0c0;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-9 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    data-focus-lock-disabled="false"
  >
    <div
      aria-modal="true"
      class="nk-modal-enter-done emotion-0"
      data-testid="modal"
      role="dialog"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          />
        </div>
      </div>
      <div
        class="emotion-4"
        data-testid="dialog-content"
      >
        <p
          class="emotion-5"
        >
          Modal body content
        </p>
      </div>
      <button
        aria-label="close"
        class="emotion-6"
        data-testid="button"
        style="top: 0px;"
        type="button"
      >
        <div
          class="emotion-7"
        >
          <div
            class="emotion-8"
          >
            <svg
              aria-hidden="true"
              class="emotion-9 emotion-10"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`Modal renders without overlay 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />
  .emotion-0 {
  box-sizing: border-box;
  position: fixed;
  z-index: 80;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0;
  background-color: #ffffff;
  box-shadow: 0 2px 8px 0 rgba(40,41,61,0.04),0 16px 24px 0 rgba(96,97,112,0.16);
  min-height: 15vh;
  opacity: 0;
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    top: 20vh;
    -webkit-transform: translate(-50%, 0);
    -moz-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
  }
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    width: 90vw;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    width: 60vw;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    width: 45vw;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    width: 38vw;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    width: 31vw;
  }
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    max-height: 95vh;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    max-height: 80vh;
  }
}

.emotion-0.nk-modal-enter {
  opacity: 0;
}

.emotion-0.nk-modal-enter-active {
  opacity: 1;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-enter-done {
  opacity: 1;
}

.emotion-0.nk-modal-exit {
  opacity: 1;
}

.emotion-0.nk-modal-exit-active {
  opacity: 0;
  transition-property: opacity;
  transition-duration: 200ms;
}

.emotion-0.nk-modal-exit-done {
  opacity: 0;
}

.emotion-1 {
  box-sizing: border-box;
  min-height: 48px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
}

.emotion-4 {
  margin: 0;
  padding: 1px 0;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 8px;
  width: 48px;
  height: 48px;
  margin-left: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden auto;
  padding: 24px;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 48px;
  height: 48px;
  padding: 8px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-radius: 50%;
  color: #2e2e2e;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  box-sizing: border-box;
  position: absolute;
  top: 0;
  right: 0;
  margin: 0 8px;
}

.emotion-8 svg {
  width: 24px;
  height: 24px;
}

.emotion-8 svg {
  fill: #2e2e2e;
}

.emotion-8:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-8:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-8:disabled {
  background-color: transparent;
  color: #c0c0c0;
}

.emotion-8:disabled svg {
  fill: #c0c0c0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-11 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

<div
    data-focus-lock-disabled="false"
  >
    <div
      aria-modal="true"
      class="nk-modal-enter-done emotion-0"
      data-testid="modal"
      role="dialog"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <p
              class="emotion-4"
            >
              Modal header content
            </p>
          </div>
          <div
            class="emotion-5"
          />
        </div>
      </div>
      <div
        class="emotion-6"
        data-testid="dialog-content"
      >
        <p
          class="emotion-4"
        >
          Modal body content
        </p>
      </div>
      <button
        aria-label="close"
        class="emotion-8"
        data-testid="button"
        style="top: 0px;"
        type="button"
      >
        <div
          class="emotion-9"
        >
          <div
            class="emotion-10"
          >
            <svg
              aria-hidden="true"
              class="emotion-11 emotion-12"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;
